# fulcra-tools

./: .gitignore  AGENTS.md  BRIEF-acks-changequery.md  COORDINATION-PROTOCOL.md  CREDS_NEEDED.md  FULCRA-PRIMITIVES.md  LICENSE  MAINTAINERS.md  README.md  SESSION_HANDOFF.md  conftest.py  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: chrome-release.yml  macos.yml  uv-workspace.yml
analysis/: codex-rootcause-A-design.md
assets/caddy/: Caddyfile
assets/hermes/: AGENTS.md  SOUL.md  start-chat.sh
attention/: README.md  pyproject.toml
attention/chrome/: README.md
attention/fulcra_attention/: cli.py  collect_plugin.py  scrub.py  state.py
attention/safari/: .gitignore
attention/tests/: test_cli.py  test_collect_plugin.py  test_definition_spec.py  test_fulcra_tags_defs.py  (+1 more)
chrome/: README.md  manifest.json  options.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  AUTH0_APPLICATION.md  BETA_PACKAGING.md  E2E_STATUS.md  README.md  TESTING.md  collect.md  coord-DESIGN.md  coord2-DESIGN.md  fulcra-coord-0.13.0-rollout.md  how-do-i-get-my-data.md  skill-quality-pattern.md
fulcra_attention/: cli.py  fulcra.py  ingest.py  relay.py  scrub.py  service_manager.py  state.py
fulcra_csv/: __init__.py  cli.py  events.py  fulcra.py  parser.py
fulcra_media/: cli.py  cli_common.py  fulcra.py  service_catalog.py  setup_wizard.py  state.py  webhook_receiver.py
scripts/: probe_soft_delete.py  probe_soft_delete_2.py  probe_soft_delete_3.py  setup.sh  smoke_trakt.py  update.sh
tests/: conftest.py  test_apple_podcasts_importer.py  test_apple_podcasts_wizard.py  test_cli.py  test_cli_args.py  test_cli_common.py  test_cluster_policy_on_normalized.py  test_config.py  test_content_fingerprint.py  test_deezer_cli.py  test_e2e_netflix.py  test_fulcra_auth.py  test_fulcra_dedup.py  test_fulcra_ingest.py  test_fulcra_pipeline.py  test_fulcra_tags_defs.py  test_general_use.py  test_generic_rss_importer.py  test_goodreads_cli.py  test_image.py  test_ingest_event.py  test_json_envelope_across_importers.py  test_lastfm_cli.py  test_lastfm_edge_cases.py  test_netflix_importer.py  test_netflix_wizard.py  test_relay.py  test_relay_chrome_contract.py  test_scrub.py  test_service_catalog.py  test_service_manager.py  test_setup_wizard.py  test_snapshot_params.py  test_spotify_ifttt_importer.py  test_spotify_wizard.py  test_state.py  test_strava_auth.py  test_strava_cli.py  test_strava_importer.py  test_strava_wizard.py  (+6 more)
(+309 files in other folders)
