[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fulcra-media-helpers"
version = "0.1.0"
description = "Import media consumption (Watched/Listened) into Fulcra as annotations."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "dateparser>=1.2",
    # The fulcra-api CLI must provide both `fulcra auth print-access-token`
    # (add-cli branch) and `fulcra file download` (file-commands branch).
    # Pin to a branch/tag that includes both, or vendor a merged fork.
    "fulcra-api @ git+https://github.com/fulcradynamics/fulcra-api-python.git@file-commands",
]

[project.scripts]
fulcra-media = "fulcra_media.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
