[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fulcra-csv-importer"
version = "0.1.0"
description = "Import any CSV stream into Fulcra as annotations, with column mapping and dedup."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "dateparser>=1.2",
    # Optional but expected: fulcra-api CLI for `fulcra auth print-access-token`.
    "fulcra-api @ git+https://github.com/fulcradynamics/fulcra-api-python.git@file-commands",
]

[project.scripts]
fulcra-csv = "fulcra_csv.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fulcra_csv"]
