[project]
name = "fhd"
version = "0.1.0"
description = "Fulcra Hermes Daytona demo — operator tooling"
requires-python = ">=3.12"
dependencies = ["daytona", "python-dotenv"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
fhd-build = "fhd.build_snapshot:main"
fhd-spawn = "fhd.spawn:main"
fhd-teardown = "fhd.teardown:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fhd"]

[tool.pytest.ini_options]
pythonpath = ["src"]
